# fledgling

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  NOTICE  README.md  SKILL.md  init-fledgling-analyst.sql  init-fledgling-base.sql  init-fledgling-core.sql  init-fledgling.sql  init-source-sextant.sql  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
config/: claude-code.example.json
docs/: conversations-as-closures.md  getting-started.md  index.html  index.md  install.sql  product-thinking.md  quartermaster-pattern.md
docs/edit/: index.md
docs/macros/: code.md  conversations.md  docs.md  fts.md  repo.md  source.md
docs/planning/: NEXT_STEPS.md
fledgling/: __init__.py  cli.py  connection.py  tools.py
init/: init-fledgling-base.sql
scripts/: bump-version.sh
skills/: explore-codebase.md  investigate-issue.md  review-changes.md
sql/: code.sql  conversations.sql  docs.sql  dr_fledgling.sql  fts.sql  fts_rebuild.sql  install-fledgling.sql  repo.sql  sandbox.sql  source.sql  structural.sql  workflows.sql
tests/: conftest.py  test_cli.py  test_code.py  test_connection.py  test_conversations.py  test_docs.py  test_dr_fledgling.py  test_e2e_integration.py  test_edit_builder.py  test_edit_changeset.py  test_edit_cli.py  test_edit_locate.py  test_edit_match.py  test_edit_mcp.py  test_edit_ops.py  test_edit_postprocess_python.py  test_edit_region.py  test_edit_template.py  test_edit_transforms.py  test_fts.py  test_help.py  test_installer.py  test_mcp_server.py  test_persist.py  test_pro_defaults.py  test_pro_prompts.py  test_pro_resources.py  test_pro_session.py  test_pro_truncation.py  test_pro_workflows.py  test_profiles.py  test_repo.py  test_sandbox.py  test_source.py  test_structural.py  test_tool_publications.py  test_tools.py  test_workflows.py
(+69 files in other folders)
