[project]
name = "fledgling"
version = "0.5.0"
description = "MCP tools that help AI agents get their bearings in a codebase — unified SQL views over code, git, docs, and conversations, powered by DuckDB."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Teague Sterling" },
]
keywords = ["duckdb", "mcp", "ai-agents", "code-intelligence", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
pro = [
    "duckdb>=1.5.0",
    "fastmcp>=3.0",
]

[project.scripts]
fledgling = "fledgling.cli:main"
fledgling-pro = "fledgling.pro.server:main"

[project.urls]
Homepage = "https://teaguesterling.github.io/fledgling/"
Documentation = "https://teaguesterling.github.io/fledgling/"
Repository = "https://github.com/teaguesterling/fledgling"
Issues = "https://github.com/teaguesterling/fledgling/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fledgling"]

[tool.hatch.build.targets.wheel.force-include]
"sql" = "fledgling/sql"
"init" = "fledgling/init"
"bin/fledgling-cli" = "fledgling/bin/fledgling-cli"
"SKILL.md" = "fledgling/SKILL.md"
"skills" = "fledgling/skills"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
test = [
    "duckdb>=1.5.0",
    "pytest>=7.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.0",
]
